Genericize wizard settings API